[gd_scene load_steps=51 format=4 uid="uid://bwgnq6qm0dskt"]

[ext_resource type="Texture2D" uid="uid://bih28g1sg3rgp" path="res://sprites/Ocean/sky.png" id="1_pl11u"]
[ext_resource type="Texture2D" uid="uid://f07wunq6c5ec" path="res://sprites/Ocean/teeth.png" id="2_bhx41"]
[ext_resource type="Script" uid="uid://d0lyqyih0dmje" path="res://scripts/npc.gd" id="3_qnb83"]
[ext_resource type="Texture2D" uid="uid://bkgepoxotg5o4" path="res://sprites/Interact.png" id="4_sww3w"]
[ext_resource type="Texture2D" uid="uid://xqdewes5ovky" path="res://sprites/Green/idle_0.png" id="5_suyxu"]
[ext_resource type="Texture2D" uid="uid://bjyaw236ycqxc" path="res://sprites/Green/idle_1.png" id="6_sgl2t"]
[ext_resource type="Script" uid="uid://kjhguage8fg1" path="res://scripts/player.gd" id="7_qouja"]
[ext_resource type="Texture2D" uid="uid://dvya1hd5dgetv" path="res://sprites/Cyan/fall_0.png" id="8_wljb1"]
[ext_resource type="Texture2D" uid="uid://dbykrsykoow3y" path="res://sprites/Cyan/fall_1.png" id="9_v2yb1"]
[ext_resource type="Texture2D" uid="uid://dr76ref4pvkby" path="res://sprites/Cyan/idle_0.png" id="10_js0lu"]
[ext_resource type="Texture2D" uid="uid://b1738wp3nsxv6" path="res://sprites/Cyan/hanging_0.png" id="10_qouja"]
[ext_resource type="Texture2D" uid="uid://ck2sc3dj7a8en" path="res://sprites/Cyan/idle_1.png" id="11_gxtfn"]
[ext_resource type="Texture2D" uid="uid://dliomkhwg5poj" path="res://sprites/Cyan/hanging_1.png" id="12_gxtfn"]
[ext_resource type="Texture2D" uid="uid://c5aq62qa8kc33" path="res://sprites/Cyan/idle_2.png" id="12_twgab"]
[ext_resource type="Texture2D" uid="uid://b3gnfncx1bjm7" path="res://sprites/Cyan/jump_0.png" id="13_02fa5"]
[ext_resource type="Texture2D" uid="uid://i0b1xoke3tt5" path="res://sprites/Cyan/hanging_2.png" id="13_twgab"]
[ext_resource type="Texture2D" uid="uid://blyx82jpavsty" path="res://sprites/Cyan/jump_1.png" id="14_nepv3"]
[ext_resource type="Texture2D" uid="uid://b3txps33pigus" path="res://sprites/Cyan/walk_0.png" id="15_7025r"]
[ext_resource type="Texture2D" uid="uid://dl8f8vi8wjjvr" path="res://sprites/Cyan/walk_1.png" id="16_m4url"]
[ext_resource type="Texture2D" uid="uid://cugpsdo0loerg" path="res://sprites/Cyan/walk_2.png" id="17_8ool0"]
[ext_resource type="Texture2D" uid="uid://bw7cm0m7o5ey5" path="res://sprites/Cyan/walk_3.png" id="18_pr1ej"]
[ext_resource type="Texture2D" uid="uid://bmaeavcf8h8ah" path="res://sprites/Cyan/walk_4.png" id="19_05nbr"]
[ext_resource type="Texture2D" uid="uid://d0yrk6clvk6f5" path="res://sprites/Cyan/walk_5.png" id="20_0sl42"]
[ext_resource type="Texture2D" uid="uid://cku5ayplmy3vw" path="res://sprites/Cyan/walk_6.png" id="21_oaba0"]
[ext_resource type="Texture2D" uid="uid://bfylwdn0p32mc" path="res://sprites/Red/idle_0.png" id="22_458eo"]
[ext_resource type="Texture2D" uid="uid://c4j6aus6ej1o5" path="res://sprites/Red/idle_1.png" id="23_h3rex"]
[ext_resource type="Script" uid="uid://cve6y0gwev13r" path="res://scripts/UI.gd" id="24_fedci"]
[ext_resource type="Script" uid="uid://cl4w8itlllxt4" path="res://scripts/red.gd" id="24_wljb1"]
[ext_resource type="Texture2D" uid="uid://c7nuucyvu5u5i" path="res://sprites/box.png" id="25_8qswn"]
[ext_resource type="Texture2D" uid="uid://b0dpk4mm7mlp1" path="res://sprites/tempTerrain.png" id="25_v2yb1"]
[ext_resource type="Texture2D" uid="uid://ceyugct46dhbb" path="res://sprites/Red/hover_0.png" id="25_wljb1"]
[ext_resource type="Texture2D" uid="uid://cescip2t350lm" path="res://sprites/Red/float_0.png" id="26_sgl2t"]
[ext_resource type="Texture2D" uid="uid://0nsx5o3y0ki8" path="res://sprites/Red/hover_1.png" id="26_v2yb1"]
[ext_resource type="Texture2D" uid="uid://u1kmj0sc17x3" path="res://sprites/Red/hover_2.png" id="27_js0lu"]
[ext_resource type="Texture2D" uid="uid://5ay5uk1qnh2o" path="res://sprites/Red/float_1.png" id="28_v2yb1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_js0lu"]
texture = ExtResource("25_v2yb1")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_gxtfn"]
sources/0 = SubResource("TileSetAtlasSource_js0lu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js0lu"]
size = Vector2(32, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2yb1"]
size = Vector2(16, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wljb1"]
size = Vector2(944, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5p1p"]
size = Vector2(76, 59)

[sub_resource type="SpriteFrames" id="SpriteFrames_5b14r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_suyxu")
}, {
"duration": 1.0,
"texture": ExtResource("6_sgl2t")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lc2xo"]
radius = 6.0
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_iotsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_wljb1")
}, {
"duration": 1.0,
"texture": ExtResource("9_v2yb1")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qouja")
}, {
"duration": 1.0,
"texture": ExtResource("12_gxtfn")
}, {
"duration": 1.0,
"texture": ExtResource("13_twgab")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_js0lu")
}, {
"duration": 1.0,
"texture": ExtResource("11_gxtfn")
}, {
"duration": 1.0,
"texture": ExtResource("10_js0lu")
}, {
"duration": 1.0,
"texture": ExtResource("12_twgab")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_02fa5")
}, {
"duration": 1.0,
"texture": ExtResource("14_nepv3")
}],
"loop": true,
"name": &"rise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_7025r")
}, {
"duration": 1.0,
"texture": ExtResource("16_m4url")
}, {
"duration": 1.0,
"texture": ExtResource("17_8ool0")
}, {
"duration": 1.0,
"texture": ExtResource("18_pr1ej")
}, {
"duration": 1.0,
"texture": ExtResource("19_05nbr")
}, {
"duration": 1.0,
"texture": ExtResource("20_0sl42")
}, {
"duration": 1.0,
"texture": ExtResource("21_oaba0")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qhcbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_458eo")
}, {
"duration": 1.0,
"texture": ExtResource("23_h3rex")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_gxtfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_sgl2t")
}, {
"duration": 1.0,
"texture": ExtResource("28_v2yb1")
}],
"loop": true,
"name": &"float",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_wljb1")
}, {
"duration": 1.0,
"texture": ExtResource("26_v2yb1")
}, {
"duration": 1.0,
"texture": ExtResource("27_js0lu")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wljb1"]

[sub_resource type="LabelSettings" id="LabelSettings_eow3j"]
font_size = 10
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iotsf"]
line_spacing = -2.0
font_size = 6

[sub_resource type="ImageTexture" id="ImageTexture_hb5m1"]

[node name="Node2D" type="Node2D"]

[node name="Sky" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.01, 0.01)
scroll_offset = Vector2(-262, -72)
repeat_size = Vector2(640, 0)
repeat_times = 5

[node name="Sky" type="Sprite2D" parent="Sky"]
texture_filter = 1
position = Vector2(892, 56)
texture = ExtResource("1_pl11u")

[node name="Teeth" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.2, 0.2)
scroll_offset = Vector2(-262, -99)
repeat_size = Vector2(640, 0)
repeat_times = 5

[node name="Teeth" type="Sprite2D" parent="Teeth"]
texture_filter = 1
position = Vector2(892, 66)
texture = ExtResource("2_bhx41")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(158, 23)

[node name="background tiles" type="TileMapLayer" parent="Ground"]
texture_filter = 1
tile_map_data = PackedByteArray("AADy/wYAAAAAAAIAAADy/wUAAAAAAAIAAADz/wUAAAAAAAIAAADz/wYAAAAAAAIAAAD0/wYAAAAAAAIAAAD0/wUAAAAAAAIAAAD1/wUAAAAAAAIAAAD1/wYAAAAAAAIAAAD0/wQAAAAAAAIAAAD0/wMAAAAAAAIAAAD0/wIAAAAAAAIAAAD0/wEAAAAAAAIAAAD0/wAAAAAAAAIAAAD0////AAAAAAIAAADz////AAAAAAIAAADz/wAAAAAAAAIAAADz/wEAAAAAAAIAAADz/wIAAAAAAAIAAADz/wMAAAAAAAIAAADz/wQAAAAAAAIAAADy/wQAAAAAAAIAAADy/wMAAAAAAAIAAADy/wIAAAAAAAIAAADy/wEAAAAAAAIAAADy/wAAAAAAAAIAAADy////AAAAAAIAAAD1////AAAAAAIAAAD1/wAAAAAAAAIAAAD1/wEAAAAAAAIAAAD1/wIAAAAAAAIAAAD1/wMAAAAAAAIAAAD1/wQAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_gxtfn")

[node name="tiles" type="TileMapLayer" parent="Ground"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAADAAcAAAAAAAAAAAACAAcAAAAAAAAAAAABAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAD//wcAAAAAAAAAAAD+/wcAAAAAAAAAAAD9/wcAAAAAAAAAAAD8/wcAAAAAAAAAAAD7/wcAAAAAAAAAAAD6/wcAAAAAAAAAAAD5/wcAAAAAAAAAAAD4/wcAAAAAAAAAAAD3/wcAAAAAAAAAAAD2/wcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAcAAAAAAAAAAAASAAcAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAAcAAAAAAAAAAAAXAAcAAAAAAAAAAAAYAAcAAAAAAAAAAAAZAAcAAAAAAAAAAAAaAAcAAAAAAAAAAAAbAAcAAAAAAAAAAAAcAAcAAAAAAAAAAAAdAAcAAAAAAAAAAAAeAAcAAAAAAAAAAAAfAAcAAAAAAAAAAAAgAAcAAAAAAAAAAAAhAAcAAAAAAAAAAAAiAAcAAAAAAAAAAAAjAAcAAAAAAAAAAAAkAAcAAAAAAAAAAAAlAAcAAAAAAAAAAAAmAAcAAAAAAAAAAAAnAAcAAAAAAAAAAAAoAAcAAAAAAAAAAAD1/wcAAAAAAAAAAAD0/wcAAAAAAAAAAADz/wcAAAAAAAAAAADy/wcAAAAAAAAAAADx/wcAAAAAAAAAAADw/wcAAAAAAAAAAADv/wcAAAAAAAAAAADu/wcAAAAAAAAAAADv/wgAAAAAAAAAAADw/wgAAAAAAAAAAADx/wgAAAAAAAAAAADy/wgAAAAAAAAAAADz/wgAAAAAAAAAAAD0/wgAAAAAAAAAAAD1/wgAAAAAAAAAAAD2/wgAAAAAAAAAAAD3/wgAAAAAAAAAAAD4/wgAAAAAAAAAAAD5/wgAAAAAAAAAAAD6/wgAAAAAAAAAAAD7/wgAAAAAAAAAAAD8/wgAAAAAAAAAAAD9/wgAAAAAAAAAAAD+/wgAAAAAAAAAAAD//wgAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAARAAgAAAAAAAAAAAASAAgAAAAAAAAAAAATAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAAgAAAAAAAAAAAAXAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAZAAgAAAAAAAAAAAAaAAgAAAAAAAAAAAAbAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAdAAgAAAAAAAAAAAAeAAgAAAAAAAAAAAAfAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAhAAgAAAAAAAAAAAAiAAgAAAAAAAAAAAAjAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAlAAgAAAAAAAAAAAAmAAgAAAAAAAAAAAAnAAgAAAAAAAAAAAAoAAgAAAAAAAEAAADu/wgAAAABAAAAAADz/wUAAAABAAEAAAD0/wUAAAABAAEAAADz/wMAAAABAAEAAAD0/wMAAAABAAEAAADz/wEAAAABAAEAAAD0/wEAAAABAAEAAADz////AAABAAEAAAD0////AAABAAEAAADy/wQAAAAAAAAAAADy/wMAAAAAAAAAAADy/wIAAAAAAAAAAADy/wEAAAAAAAAAAADy/wAAAAAAAAAAAADy////AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_gxtfn")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Ground"]
position = Vector2(-192, 18)
shape = SubResource("RectangleShape2D_js0lu")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Ground"]
position = Vector2(-192, -14)
shape = SubResource("RectangleShape2D_js0lu")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ground"]
position = Vector2(-192, 50)
shape = SubResource("RectangleShape2D_js0lu")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ground"]
position = Vector2(-192, 82)
shape = SubResource("RectangleShape2D_js0lu")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2(-168, 32)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2(-216, 32)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(184, 128)
shape = SubResource("RectangleShape2D_wljb1")

[node name="Green" type="Area2D" parent="."]
position = Vector2(549, 104)
script = ExtResource("3_qnb83")

[node name="Interact" type="Sprite2D" parent="Green"]
texture_filter = 1
position = Vector2(0.5, -3.24998)
scale = Vector2(1, 1.05556)
texture = ExtResource("4_sww3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_x5p1p")
debug_color = Color(0.57036, 0.555939, 3.85046e-07, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Green"]
texture_filter = 1
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_5b14r")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.429632

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-33, -8)
script = ExtResource("7_qouja")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_lc2xo")
one_way_collision_margin = 0.0
debug_color = Color(0.725017, 0.403927, 0.663884, 0.42)

[node name="Cyan" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_iotsf")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -21)
limit_smoothed = true
position_smoothing_enabled = true

[node name="Red" type="Area2D" parent="."]
position = Vector2(423, 132)
script = ExtResource("3_qnb83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red"]
position = Vector2(4, -27.5)
shape = SubResource("RectangleShape2D_x5p1p")
debug_color = Color(0.57036, 0.555939, 3.85046e-07, 0.42)

[node name="Interact" type="Sprite2D" parent="Red"]
texture_filter = 1
position = Vector2(4.5, -39.5)
scale = Vector2(1, 1.05556)
texture = ExtResource("4_sww3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Red"]
texture_filter = 1
position = Vector2(0, -23)
sprite_frames = SubResource("SpriteFrames_qhcbd")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.379744

[node name="RedAlive" type="CharacterBody2D" parent="."]
position = Vector2(160, 90)
script = ExtResource("24_wljb1")

[node name="Red" type="AnimatedSprite2D" parent="RedAlive"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_gxtfn")
animation = &"float"
autoplay = "float"
frame_progress = 0.0863889

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedAlive"]
shape = SubResource("CircleShape2D_wljb1")
disabled = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("24_fedci")

[node name="Debug" type="Label" parent="UI"]
visible = false
offset_left = -2.0
offset_right = 318.0
offset_bottom = 180.0
text = " X vel : <X>
 Y vel : <y>"
label_settings = SubResource("LabelSettings_eow3j")
autowrap_mode = 3

[node name="DialogueBox" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="Box" type="Sprite2D" parent="UI/DialogueBox"]
texture_filter = 1
position = Vector2(160, 153)
texture = ExtResource("25_8qswn")

[node name="Text" type="Label" parent="UI/DialogueBox"]
layout_mode = 0
offset_left = 69.0
offset_top = 129.0
offset_right = 253.0
offset_bottom = 175.0
text = "(You should go put on your hat"
label_settings = SubResource("LabelSettings_iotsf")
autowrap_mode = 3

[node name="Portrait" type="Sprite2D" parent="UI/DialogueBox"]
position = Vector2(0, 180)
texture = SubResource("ImageTexture_hb5m1")

[connection signal="body_entered" from="Green" to="Green" method="_on_body_entered"]
[connection signal="body_entered" from="Green" to="Player" method="_on_test_dialogue_body_entered"]
[connection signal="body_exited" from="Green" to="Green" method="_on_body_exited"]
[connection signal="body_exited" from="Green" to="Player" method="_on_test_dialogue_body_exited"]
[connection signal="dialogue" from="Green" to="Player" method="_on_npc_dialogue_range"]
[connection signal="HeyRed" from="Player" to="RedAlive" method="_on_player_hey_red"]
[connection signal="PosX" from="Player" to="Green" method="_on_player_pos_x"]
[connection signal="Start_Dialogue" from="Player" to="UI" method="_on_player_start_dialogue"]
[connection signal="VelX" from="Player" to="UI" method="_on_player_vel_x"]
[connection signal="VelY" from="Player" to="UI" method="_on_player_vel_y"]
[connection signal="body_entered" from="Red" to="Player" method="_on_test_dialogue_body_entered"]
[connection signal="body_entered" from="Red" to="Red" method="_on_body_entered"]
[connection signal="body_exited" from="Red" to="Player" method="_on_test_dialogue_body_exited"]
[connection signal="body_exited" from="Red" to="Red" method="_on_body_exited"]
[connection signal="dialogue" from="Red" to="Player" method="_on_npc_dialogue_range"]
[connection signal="dialogue_ended" from="UI" to="Player" method="_on_dialogue_ended"]
